tests/elab_fail/metaDefSuppressInsideQuot.lean.out.expected
metaDefSuppressInsideQuot.lean:39:59: error: suppressInsideQuot is not set
